Evidently launch4j can't really package a jre. Launch a separate jvm with bootstrap provided options for the client instead.